Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -1568,7 +1568,7 @@ i, .btn .show-max {
     margin: 0 0 21px 0 !important;
     width: auto !important;
     height: auto !important;
-    max-width: 233px;
+    max-width: 377px;
     border-radius: 0 !important;
 }
 .icon-block-xs img{
